several style changes

--- a/views/briefings.ejs
+++ b/views/briefings.ejs
@@ -2,5 +2,6 @@
 '../css/briefings.css'}) %>
 
 <div id="card-container" class="columns is-desktop"></div>
-<%- include('./partials/footer') %>
+<%- include('./partials/footer', {footerAttributes: {class: 'footer'}}) %>
+
 <script type="module" src="../js/briefings.js"></script>
