--- a/views/flows.ejs
+++ b/views/flows.ejs
@@ -212,14 +212,6 @@
     </article>
   </div>
 </div>
+<%- include('./partials/footer', {footerAttributes: {class: 'footer'}}) %>
 
 <script type="module" src="../js/flows.js"></script>
-<footer class="footer">
-  <div class="content has-text-centered">
-    <p>
-      <strong>Captain's Climb</strong> by
-      <a href="https://jgthms.com">Andrew Butler</a>. The source code is
-      licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
-    </p>
-  </div>
-</footer>
