--- a/views/questions/create.ejs
+++ b/views/questions/create.ejs
@@ -71,6 +71,6 @@
       </form>
     </div>
   </section>
-  <%- include('../partials/footer') %>
+  <%- include('../partials/footer', {footerAttributes: {class: 'footer'}}) %>
 </div>
 <script src="../js/create.js"></script>
