--- a/views/questions/modify-questions.ejs
+++ b/views/questions/modify-questions.ejs
@@ -66,4 +66,4 @@
   }
 </script>
 
-<%- include('../partials/footer') %>
+<%- include('../partials/footer', {footerAttributes: {class: 'footer'}}) %>
