--- a/views/questions/view-questions.ejs
+++ b/views/questions/view-questions.ejs
@@ -33,4 +33,4 @@
     </div>
   </div>
 </section>
-<%- include('../partials/footer') %>
+<%- include('../partials/footer', {footerAttributes: {class: 'footer'}}) %>
