--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,9 +6,55 @@ html, body {
     font-family: 'Merriweather', serif;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1506695939086-156c2eff767b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.footer {
+    background-color: transparent;
+    padding: 1rem;
+}
+
+footer a {
+    color: inherit;
+}
+
+.footer p {
+    font-size: 0.5rem;
+    color: #fff;
+}
+
+.brand {
+    color: #fff;
+    font-weight: 900;
+}
+
+input[type=text],
+input[type=password] {
+    box-shadow: none;
+}
+
+.button.is-fullwidth {
+    font-size: 1.2rem;
+    font-weight: bold;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+    background-color: #ee6c4d;
+}
+
+.button.is-fullwidth:hover {
+    background-color: #fa3b0b;
+    color: #000;
+
+}
+
+@media screen and (max-width: 768px) {
+    .title {
+        font-size: 2rem;
+    }
 }
