--- a/public/css/new-note.css
+++ b/public/css/new-note.css
@@ -6,16 +6,17 @@ html, body {
     font-family: 'Merriweather', serif;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1506695939086-156c2eff767b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    color: #fff;
+    position: relative;
 }
 
 section {
     flex: 1;
+    min-height: calc(100vh - 50px);
 }
 
 .title {
@@ -47,6 +48,24 @@ section {
 
 
 footer p {
-    color: #000;
+    color: #fff;
     font-size: 0.6rem;
+}
+
+.brand {
+    color: #fff !important;
+    font-size: 0.6rem;
+    font-weight: 900;
+}
+
+.footer {
+    background-color: transparent;
+    padding: 0.6rem 1rem;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+footer a {
+    color: #fff;
 }
