--- a/views/questions/view-questions.ejs
+++ b/views/questions/view-questions.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header', {title: 'View All Questions', style:
-'../css/customquestions.css'}) %>
+'../css/viewQuestions.css'}) %>
 <section class="section">
   <h1 class="has-text-centered is-size-1-tablet">All Questions</h1>
   <div class="container">
