changed folder structure

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="<%= footerAttributes.class %>">
+<!-- <footer class="<%= footerAttributes.class %>"> -->
   <div class="content has-text-centered">
     <p>
       <strong class="brand">Upgrade Me </strong> by
