--- a/views/index-backup.ejs
+++ b/views/index-backup.ejs
@@ -1,3 +1,6 @@
+<%- include('partials/header', {title: "Upgrade Me | 2023",
+style:'../css/main.css'}) %>
+
 <div id="page-wrapper">
   <section class="hero is-fullheight-with-navbar hero-custom">
     <div class="hero-body">
