--- a/public/css/login.css
+++ b/public/css/login.css
@@ -12,6 +12,22 @@ html, body {
     background-size: cover;
 }
 
+.container {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box {
+    width: 100%;
+    max-width: 400px;
+}
+
+.title {
+    text-align: center;
+}
+
 .footer {
     background-color: transparent;
     padding: 1rem;
