--- a/public/css/view-notes.css
+++ b/public/css/view-notes.css
@@ -10,6 +10,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
 }
 
 .title {
@@ -23,6 +24,10 @@ body {
 .card-header {
     background-color: #B9E9FC;
     color: black;
+}
+
+.card-content {
+    background-color: red;
 }
 
 .card-header-title {
