--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -1,99 +1,98 @@
-<%- include('partials/header', {title: 'Quiz Time!', style: './css/quiz2.css'})
-%>
-
-<section class="section">
-  <div class="container">
-    <div class="columns is-centered">
-      <div class="column is-one-third">
-        <h1 class="title is-2 has-text-centered">Quiz Time!</h1>
-        <div class="field">
-          <label class="label" for="categoryFilter">Filter by Category:</label>
-          <div class="control">
-            <select
-              id="categoryFilter"
-              name="categoryFilter"
-              class="select2"
-              multiple
-            >
-              <% categories.forEach(function(category, index) { %>
-              <option value="<%= category.value %>">
-                <%= category.name %>
-              </option>
-              <% }); %>
-            </select>
+<div class="container">
+  <div class="columns is-centered">
+    <div class="column is-one-third">
+      <h1 class="title is-2 has-text-centered">Quiz Time!</h1>
+      <div class="field">
+        <label class="label" for="categoryFilter">Filter by Category:</label>
+        <div class="control">
+          <select
+            id="categoryFilter"
+            name="categoryFilter"
+            class="select2"
+            multiple
+          >
+            <% categories.forEach(function(category, index) { %>
+            <option value="<%= category.value %>"><%= category.name %></option>
+            <% }); %>
+          </select>
+        </div>
+      </div>
+      <div class="box">
+        <div class="has-text-centered">
+          <label class="custom-checkbox" for="showAnswersCheckbox">
+            <input
+              type="checkbox"
+              id="showAnswersCheckbox"
+              class="hidden-checkbox"
+            />
+            <span class="styled-checkbox"></span>
+            Show Answers
+          </label>
+          <label class="custom-checkbox" for="randomizeCheckbox">
+            <input
+              type="checkbox"
+              id="randomizeCheckbox"
+              class="hidden-checkbox"
+            />
+            <span class="styled-checkbox"></span>
+            Randomize
+          </label>
+          <br />
+          <hr />
+          <div class="progress-container" id="progress-container">
+            <span class="progress-percentage progress-start">0%</span>
+            <div id="progress-bar" class="progress-bar"></div>
+            <span class="progress-percentage progress-end">100%</span>
           </div>
         </div>
-        <div class="box">
-          <div class="has-text-centered">
-            <label class="custom-checkbox" for="showAnswersCheckbox">
-              <input
-                type="checkbox"
-                id="showAnswersCheckbox"
-                class="hidden-checkbox"
-              />
-              <span class="styled-checkbox"></span>
-              Show Answers
-            </label>
-            <label class="custom-checkbox" for="randomizeCheckbox">
-              <input
-                type="checkbox"
-                id="randomizeCheckbox"
-                class="hidden-checkbox"
-              />
-              <span class="styled-checkbox"></span>
-              Randomize
-            </label>
-            <br />
-            <hr />
-            <div class="progress-container" id="progress-container">
-              <div id="progress-bar" class="progress-bar"></div>
+      </div>
+      <div class="card">
+        <div class="question-container">
+          <span
+            id="question-count"
+            style="font-size: 1rem; color: #000; padding: 10px"
+          ></span>
+          <p id="question" class="card-header-title"></p>
+        </div>
+        <hr />
+        <div class="card-content">
+          <div class="answer">
+            <div class="answer-content">
+              <p id="answer" class="card-text answer hide"></p>
             </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="question-container">
-            <span
-              id="question-count"
-              style="font-size: 1rem; color: #000; padding: 10px"
-            ></span>
-            <p id="question" class="card-header-title"></p>
           </div>
           <hr />
-          <div class="card-content">
-            <div class="answer">
-              <div class="answer-content">
-                <p id="answer" class="card-text answer hide"></p>
-              </div>
-            </div>
-            <hr />
-            <div class="content">
-              <br />
-              <p id="category" class="subtitle is-6"></p>
-            </div>
+          <div class="content">
+            <br />
+            <p id="category" class="subtitle is-6"></p>
+          </div>
+          <div class="btn-box">
+            <button
+              id="prev-question"
+              class="nav-btn button is-rounded is-fullwidth"
+              style="background-color: #ee6c4d"
+            >
+              <<<
+            </button>
+
+            <button
+              id="show-answer"
+              class="answer-btn button is-rounded is-fullwidth"
+            >
+              Show Answer
+            </button>
+
+            <button
+              id="next-question"
+              class="nav-btn button is-rounded is-fullwidth"
+              style="background-color: #ee6c4d"
+            >
+              >>>
+            </button>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="box btn-box">
-    <button
-      id="prev-question"
-      class="nav-btn button is-rounded"
-      style="background-color: #ee6c4d"
-    >
-      <<<
-    </button>
-    <button id="show-answer" class="answer-btn button is-rounded">
-      Show Answer
-    </button>
-    <button
-      id="next-question"
-      class="nav-btn button is-rounded"
-      style="background-color: #ee6c4d"
-    >
-      >>>
-    </button>
-  </div>
-</section>
-
+</div>
 <script src="js/quiz.js"></script>
