--- a/public/css/quiz2.css
+++ b/public/css/quiz2.css
@@ -17,63 +17,56 @@ body {
 
 .content {
     font-size: 0.8rem;
-
 }
 
 .title {
-    margin-bottom: 1rem;
-    margin-top: 2rem;
+    margin: 2rem 0 1rem;
     color: #fff !important;
 }
 
-.question-container {
-    min-height: 130px;
+.content-container {
+    text-align: justify;
+    background-color: #2568fb;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 7px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 180px;
+    width: 100%;
+    border: 1px solid gray;
+    margin-bottom: 10px;
+    box-sizing: border-box;
 }
 
-#question {
-    text-align: justify;
+#answer {
+    font-weight: 700;
+    color: #000;
 }
 
 #category {
-    font-size: 0.6rem;
-}
-
-.answer-content {
-    min-height: 160px;
-    border: 1px solid gray;
-    padding: 5px;
-    font-size: 1.2rem;
-    border-radius: 7px;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    -ms-border-radius: 7px;
-    -o-border-radius: 7px;
+    font-size: 0.8rem;
+    color: #fff;
 }
 
 .card {
-    background-color: #ffffff;
+
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding-bottom: 1rem;
+    padding: 1rem;
     width: 100%;
-
 }
 
 .card-header-title {
     font-size: 1.25rem;
     font-weight: bold;
-    min-height: 180px;
-    border: 1px solid gray;
-    margin: 5px;
+    text-align: justify;
 }
 
 .card-text.answer.hide,
 .card-text.answer.show {
     transition: opacity 0.3s ease, max-height 0.3s ease;
-    -webkit-transition: opacity 0.3s ease, max-height 0.3s ease;
-    -moz-transition: opacity 0.3s ease, max-height 0.3s ease;
-    -ms-transition: opacity 0.3s ease, max-height 0.3s ease;
-    -o-transition: opacity 0.3s ease, max-height 0.3s ease;
 }
 
 .card-text.answer.hide {
@@ -91,46 +84,18 @@ body {
     color: #fff !important;
 }
 
-.nav-btn,
-.answer-btn {
-    background-color: #ee6c4d;
-    color: #ffffff;
-    font-weight: bold;
-    flex: 1;
-    margin: 0 5px;
-    text-align: center;
-    font-size: 0.8rem;
-}
-
-.nav-btn:hover,
-.answer-btn:hover {
-    background-color: #ea5a3b;
-    color: #ffffff;
-}
-
 .btn-box {
-    margin-top: 20px;
+    margin-bottom: 30px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-
-}
-
-.select2 {
-    width: 100%;
-
-
 }
 
 .progress-container {
     width: 50%;
     height: 20px;
-    background-color: none;
-    margin-bottom: 25px;
-    margin: 0 auto;
-
+    margin: 0 auto 25px;
     position: relative;
-
 }
 
 .progress-percentage {
@@ -155,7 +120,8 @@ body {
 .progress-bar {
     width: 0%;
     height: 100%;
-    background-color: #169227;
+    background-color: #2568fb;
+
     transition: width 0.5s;
     font-size: 2rem;
 }
@@ -163,4 +129,89 @@ body {
 #question-count {
     color: #fff;
     font-size: 1.5rem;
+}
+
+#question {
+    color: #000;
+}
+
+.hidden-checkbox {
+    display: none;
+}
+
+.custom-checkbox {
+    position: relative;
+    padding-left: 30px;
+    cursor: pointer;
+    user-select: none;
+    font-size: 0.8rem;
+    color: #000;
+    margin: 10px;
+    margin-top: -20px;
+}
+
+.styled-checkbox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #444;
+    border: 2px solid #fff;
+    border-radius: 3px;
+    transition: background-color 0.3s;
+}
+
+.styled-checkbox:after {
+    content: "";
+    position: absolute;
+    display: none;
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
+}
+
+.hidden-checkbox:checked~.styled-checkbox {
+    background-color: #2568fb;
+
+}
+
+.hidden-checkbox:checked~.styled-checkbox:after {
+    display: block;
+}
+
+.card,
+.box {
+    background-color: #fecd45 !important;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+#prev-question, #next-question {
+    background-color: #4c8ee6;
+    color: #ffffff;
+    border: none;
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+
+.answer-container {
+    padding: 7px;
+    min-height: 200px;
+}
+
+#show-answer {
+    background-color: #ee6c4d;
+    color: #ffffff;
+    border: none;
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+
+.select2 {
+    width: 100%;
 }
