--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -83,5 +83,5 @@
   <body>
     <%- body %>
   </body>
-  <footer><%- include('./partials/footer') %></footer>
+  <!-- <footer><%- include('./partials/footer') %></footer> -->
 </html>
