--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,12 @@
       <div class="container has-text-centered">
         <div class="columns is-vcentered">
           <div class="column is-12">
-            <h1 class="title">Upgrade Me: Scaling Success</h1>
+            <!-- <h1 class="title">Upgrade Me: Scaling Success</h1> -->
+            <img
+              src="/images/UM.png"
+              alt=""
+              style="width: 400px; height: 300px; margin-bottom: 20px"
+            />
             <br />
             <p class="subtitle">"Ascend to Excellence"</p>
 
