implementing spaced repetition algorithm for flashcards

--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -67,6 +67,16 @@
             <p id="answer" class="card-text answer hide"></p>
           </div>
         </div>
+        <div class="difficulty-rating">
+          <p>Rate the difficulty:</p>
+          <div class="rating">
+            <span data-value="1">☆</span>
+            <span data-value="2">☆</span>
+            <span data-value="3">☆</span>
+            <span data-value="4">☆</span>
+            <span data-value="5">☆</span>
+          </div>
+        </div>
       </div>
 
       <div class="content">
