--- a/public/css/quiz2.css
+++ b/public/css/quiz2.css
@@ -67,6 +67,10 @@ body {
 .card-text.answer.hide,
 .card-text.answer.show {
     transition: opacity 0.3s ease, max-height 0.3s ease;
+    -webkit-transition: opacity 0.3s ease, max-height 0.3s ease;
+    -moz-transition: opacity 0.3s ease, max-height 0.3s ease;
+    -ms-transition: opacity 0.3s ease, max-height 0.3s ease;
+    -o-transition: opacity 0.3s ease, max-height 0.3s ease;
 }
 
 .card-text.answer.hide {
@@ -103,6 +107,10 @@ body {
     top: 50%;
     transform: translateY(-50%);
     font-size: 0.8rem;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
 }
 
 .progress-start {
@@ -160,6 +168,10 @@ body {
     border: 2px solid #fff;
     border-radius: 3px;
     transition: background-color 0.3s;
+    -webkit-transition: background-color 0.3s;
+    -moz-transition: background-color 0.3s;
+    -ms-transition: background-color 0.3s;
+    -o-transition: background-color 0.3s;
 }
 
 .styled-checkbox:after {
@@ -173,6 +185,10 @@ body {
     border: solid white;
     border-width: 0 3px 3px 0;
     transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
 }
 
 .hidden-checkbox:checked~.styled-checkbox {
@@ -214,4 +230,23 @@ body {
 
 .select2 {
     width: 100%;
+}
+
+.difficulty-rating {
+    margin-top: 1rem;
+}
+
+.rating {
+    display: inline-flex;
+    cursor: pointer;
+}
+
+.rating span {
+    font-size: 2rem;
+    color: #aaa;
+    padding: 0 0.25rem;
+}
+
+.rating span.selected {
+    color: #2812f3;
 }
