--- a/public/css/quiz2.css
+++ b/public/css/quiz2.css
@@ -1,18 +1,22 @@
 html, body {
     height: 100%;
     margin: 0;
+    padding: 0;
 }
 
-body {
+.main-wrapper {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1506695939086-156c2eff767b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');
     background-position: center;
     background-repeat: repeat-y;
     background-size: cover;
     height: 100vh;
+    display: flex;
+    justify-content: space-between;
 }
 
 .container {
     max-width: 95%;
+    height: 100vh;
 }
 
 .content {
@@ -22,6 +26,7 @@ body {
 .title {
     margin: 2rem 0 1rem;
     color: #fff !important;
+
 }
 
 .content-container {
@@ -202,15 +207,16 @@ body {
 
 .card,
 .box {
-    background-color: #fecd45 !important;
-    border-radius: 10px;
+    background-color: rgba(243, 243, 243, 0.8) !important;
+    border: 1px solid #000;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
 }
 
 #prev-question, #next-question {
-    background-color: #4c8ee6;
+    background-color: rgba(0, 128, 0, 0.8);
     color: #ffffff;
-    border: none;
+    border: 1px solid white;
     font-weight: 700;
     font-size: 1.2rem;
 }
@@ -221,7 +227,8 @@ body {
 }
 
 #show-answer {
-    background-color: #ee6c4d;
+    background-color: #2568fb;
+
     color: #ffffff;
     border: none;
     font-weight: 700;
