--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -1,107 +1,109 @@
-<div class="container">
-  <div class="columns is-centered">
-    <div class="column is-half-tablet is-one-third-desktop">
-      <h1 class="title is-2 has-text-centered">Quiz Time!</h1>
-      <div class="field">
-        <label class="label" for="categoryFilter">Filter by Category:</label>
-        <div class="control">
-          <div class="select is-multiple">
-            <select
-              id="categoryFilter"
-              name="categoryFilter"
-              class="select2"
-              multiple
-            >
-              <% categories.forEach(function(category, index) { %>
-              <option value="<%= category.value %>">
-                <%= category.name %>
-              </option>
-              <% }); %>
-            </select>
+<div class="main-wrapper">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-half-tablet is-one-third-desktop">
+        <h1 class="title is-2 has-text-centered">Quiz Time!</h1>
+        <div class="field">
+          <label class="label" for="categoryFilter">Filter by Category:</label>
+          <div class="control">
+            <div class="select is-multiple">
+              <select
+                id="categoryFilter"
+                name="categoryFilter"
+                class="select2"
+                multiple
+              >
+                <% categories.forEach(function(category, index) { %>
+                <option value="<%= category.value %>">
+                  <%= category.name %>
+                </option>
+                <% }); %>
+              </select>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="box">
-        <div class="has-text-centered">
-          <label class="custom-checkbox" for="showAnswersCheckbox">
-            <input
-              type="checkbox"
-              id="showAnswersCheckbox"
-              class="hidden-checkbox"
-            />
-            <span class="styled-checkbox"></span>
-            Show Answers
-          </label>
-          <label class="custom-checkbox" for="randomizeCheckbox">
-            <input
-              type="checkbox"
-              id="randomizeCheckbox"
-              class="hidden-checkbox"
-            />
-            <span class="styled-checkbox"></span>
-            Randomize
-          </label>
+        <div class="box">
+          <div class="has-text-centered">
+            <label class="custom-checkbox" for="showAnswersCheckbox">
+              <input
+                type="checkbox"
+                id="showAnswersCheckbox"
+                class="hidden-checkbox"
+              />
+              <span class="styled-checkbox"></span>
+              Show Answers
+            </label>
+            <label class="custom-checkbox" for="randomizeCheckbox">
+              <input
+                type="checkbox"
+                id="randomizeCheckbox"
+                class="hidden-checkbox"
+              />
+              <span class="styled-checkbox"></span>
+              Randomize
+            </label>
+            <br />
+            <hr />
+
+            <div class="progress-container" id="progress-container">
+              <span class="progress-percentage progress-start">0%</span>
+              <div id="progress-bar" class="progress-bar"></div>
+              <span class="progress-percentage progress-end">100%</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="question-container content-container">
+            <span
+              id="question-count"
+              class="has-text-weight-bold has-text-centered"
+              style="font-size: 1rem; color: #000; padding: 10px"
+            ></span>
+            <p id="question" class="card-header-title"></p>
+          </div>
+
+          <div class="answer-container content-container">
+            <div class="answer-content">
+              <p id="answer" class="card-text answer hide"></p>
+            </div>
+          </div>
+          <div class="difficulty-rating">
+            <p>Rate the difficulty:</p>
+            <div class="rating">
+              <span data-value="1">☆</span>
+              <span data-value="2">☆</span>
+              <span data-value="3">☆</span>
+              <span data-value="4">☆</span>
+              <span data-value="5">☆</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="content">
           <br />
-          <hr />
-
-          <div class="progress-container" id="progress-container">
-            <span class="progress-percentage progress-start">0%</span>
-            <div id="progress-bar" class="progress-bar"></div>
-            <span class="progress-percentage progress-end">100%</span>
-          </div>
+          <p id="category" class="subtitle is-6"></p>
         </div>
-      </div>
-
-      <div class="card">
-        <div class="question-container content-container">
-          <span
-            id="question-count"
-            class="has-text-weight-bold has-text-centered"
-            style="font-size: 1rem; color: #000; padding: 10px"
-          ></span>
-          <p id="question" class="card-header-title"></p>
+        <div class="btn-box">
+          <button
+            id="prev-question"
+            class="nav-btn button is-rounded is-fullwidth"
+          >
+            <<<
+          </button>
+          <button
+            id="show-answer"
+            class="answer-btn button is-rounded is-fullwidth"
+          >
+            Show Answer
+          </button>
+          <button
+            id="next-question"
+            class="nav-btn button is-rounded is-fullwidth"
+          >
+            >>>
+          </button>
         </div>
-
-        <div class="answer-container content-container">
-          <div class="answer-content">
-            <p id="answer" class="card-text answer hide"></p>
-          </div>
-        </div>
-        <div class="difficulty-rating">
-          <p>Rate the difficulty:</p>
-          <div class="rating">
-            <span data-value="1">☆</span>
-            <span data-value="2">☆</span>
-            <span data-value="3">☆</span>
-            <span data-value="4">☆</span>
-            <span data-value="5">☆</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="content">
-        <br />
-        <p id="category" class="subtitle is-6"></p>
-      </div>
-      <div class="btn-box">
-        <button
-          id="prev-question"
-          class="nav-btn button is-rounded is-fullwidth"
-        >
-          <<<
-        </button>
-        <button
-          id="show-answer"
-          class="answer-btn button is-rounded is-fullwidth"
-        >
-          Show Answer
-        </button>
-        <button
-          id="next-question"
-          class="nav-btn button is-rounded is-fullwidth"
-        >
-          >>>
-        </button>
       </div>
     </div>
   </div>
