--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,12 +6,10 @@
           <div class="column is-12">
             <!-- <h1 class="title">Upgrade Me: Scaling Success</h1> -->
             <img
-              src="/images/UM.png"
+              src="/images/logo1.png"
               alt=""
-              style="width: 400px; height: 300px; margin-bottom: 20px"
+              style="width: 500px; height: 300px; margin-bottom: 20px"
             />
-            <br />
-            <p class="subtitle">"Ascend to Excellence"</p>
 
             <br />
             <hr class="divider" />
