--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,6 +66,12 @@ html, body {
 
 }
 
+.navbar img {
+    width: 200px;
+    height: 500px;
+    background-color: #000;
+}
+
 .navbar-item h3 {
     font-weight: bold;
     font-size: larger;
