--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,7 +39,7 @@
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
 
-    <style>
+    <!-- <style>
       .navbar-item h3 {
         font-weight: bold;
         font-size: larger;
@@ -53,7 +53,7 @@
         padding-left: 10px;
       }
 
-    </style>
+    </style> -->
   </head>
   <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
