--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
             <img
               src="/images/logo1.png"
               alt=""
-              style="width: 500px; height: 300px; margin-bottom: 20px"
+              style="width: 80%; height: 65%; margin-bottom: 20px"
             />
 
             <br />
@@ -18,27 +18,18 @@
             <div class="container legal-container">
               <p class="mb-0 legal">
                 <strong class="bold">Legal Disclaimer:</strong>The information
-                provided on Upgrademe.pro is for general informational purposes
-                only. All information on the site is provided in good faith,
-                however, we make no representation or warranty of any kind,
-                express or implied, regarding the accuracy, adequacy, validity,
-                reliability, availability, or completeness of any information on
-                the site. The information on Upgrademe.pro is not intended to
-                serve as, and should not be construed as, professional advice or
-                recommendations from official sources. Users of Upgrademe.pro
-                are solely responsible for verifying the accuracy and validity
-                of any information they encounter on the site before relying on
-                it or using it for any purpose. Under no circumstance shall we
-                have any liability to you for any loss or damage of any kind
-                incurred as a result of the use of the site or reliance on any
-                information provided on the site. Your use of the site and your
-                reliance on any information on the site is solely at your own
-                risk. By using Upgrademe.pro, you hereby agree to these terms
-                and conditions and acknowledge that the information provided on
-                the site is for personal use only and should not be construed to
-                be from any official source.
+                on Upgrademe.pro is for general purposes only and provided in
+                good faith, but we make no guarantee regarding its accuracy,
+                reliability, or completeness. It should not be considered
+                professional advice or recommendations from official sources.
+                Users are responsible for verifying the information's accuracy
+                before relying on it. We are not liable for any loss or damage
+                resulting from the use of the site or its information. Your use
+                of the site is at your own risk, and you agree to these terms
+                and conditions. The information provided on the site is for
+                personal use only and should not be considered from an official
+                source.
               </p>
-              <p class="legal">The source code is licensed MIT</p>
             </div>
           </div>
         </div>
