Changed quiz page and styling on the whole app

--- a/views/flows.ejs
+++ b/views/flows.ejs
@@ -340,6 +340,50 @@
               MASK DEPLOYED<span class="right-side">NO LIGHT</span>
             </li>
           </ul>
+          <h5 class="list-item">
+            Standby Compass<span class="right-side">CHECKED</span>
+          </h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              Verify level and full of fluid, both compass cards are present.
+            </li>
+            <li class="item-to-check">
+              Compass deviation card<span class="right-side">CHECKED</span>
+            </li>
+          </ul>
+          <h5 class="list-item">
+            Display Controller Unit<span class="right-side">SET</span>
+          </h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              BARO SET<span class="right-side">IN</span>
+            </li>
+            <li class="item-to-check">
+              HSI<span class="right-side">COMPASS OR ARC</span>
+            </li>
+            <li class="item-to-check">
+              BRG<span class="right-side">ON or OFF</span>
+            </li>
+          </ul>
+          <h5 class="list-item">
+            GLARESHIELD Lights Control Panel
+            <span class="right-side">AS REQUIRED</span>
+          </h5>
+          <h5 class="list-item">
+            REVERSIONARY PANEL <span class="right-side">SET</span>
+          </h5>
+          <ul class="item-list">
+            <li class="item-to-check">
+              DISPLAYS Selector <span class="right-side">AUTO</span>
+            </li>
+            <li class="item-to-check">
+              SENSORS Selectors (ADS/IRS)
+              <span class="right-side">Pushed Out</span>
+            </li>
+          </ul>
+          <h5 class="list-item">
+            PFD <span class="right-side">NO FLAGS</span>
+          </h5>
         </article>
       </div>
       <div class="column is-full-mobile is-half-tablet is-one-quarter-desktop">
