--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -2,11 +2,11 @@
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-half-tablet is-one-third-desktop">
-        <h1 class="title is-2 has-text-centered">Quiz Time!</h1>
+        <h1 class="title is-2 has-text-centered">Flashcards</h1>
         <div class="field">
           <label class="label" for="categoryFilter">Filter by Category:</label>
           <div class="control">
-            <div class="select is-multiple">
+            <div class="select is-multiple full-width-select">
               <select
                 id="categoryFilter"
                 name="categoryFilter"
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="difficulty-rating">
-            <p>Rate the difficulty:</p>
+            <p style="color: #000">Select Difficulty (1-Easy, 5-Hard)</p>
             <div class="rating">
               <span data-value="1">☆</span>
               <span data-value="2">☆</span>
