--- a/public/css/briefings.css
+++ b/public/css/briefings.css
@@ -6,7 +6,7 @@ body {
     min-height: 100vh;
     box-sizing: border-box;
     font-family: 'Merriweather', serif;
-    background-color: #98c1d9;
+    background-color: #000;
 }
 
 .card {
