--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,6 @@
     <meta property="og:url" content="https://">
     <meta property="og:type" content="website">
     
-
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -27,7 +26,6 @@
     <script src="https://kit.fontawesome.com/082eaaba14.js" crossorigin="anonymous"></script>
     <script src="/js/navbar.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/css/select2.min.css" />
-    
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <% const stylesheet = locals.style || null; %>
     <% if(stylesheet) { %>
@@ -35,26 +33,9 @@
     <% } %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/js/select2.min.js"></script>
-
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-
-
-    <!-- <style>
-      .navbar-item h3 {
-        font-weight: bold;
-        font-size: larger;
-        /* text-align: center; */
-      }
-      .navbar-item ul {
-        padding: 0;
-        list-style-type: none;
-      }
-      .navbar-item li {
-        padding-left: 10px;
-      }
-
-    </style> -->
   </head>
+
   <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
@@ -108,7 +89,7 @@
             </div>
           </div>
           <a class="navbar-item is-size-5 has-text-weight-bold" href="/quiz">
-            Start Quiz!
+            Flashcards
           </a>
         </div>
     
@@ -136,9 +117,6 @@
             </div>
           </div>
         </div>
-        
       </div>
     </nav>
 
-
-    <script src="./js/navbar.js"></script>
