Trying to get the question ratings to work

--- a/views/questions/createQuestions.ejs
+++ b/views/questions/createQuestions.ejs
@@ -72,4 +72,4 @@
     <script src="../js/create.js"></script>
   </div>
 </div>
-<script src="../js/navbar.js"></script>
+<script src="./js/navbar.js"></script>
