--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -78,6 +78,11 @@
               <span data-value="5">☆</span>
             </div>
           </div>
+          <div class="rating-button-container">
+            <button id="submit-rating" class="button is-rounded is-fullwidth">
+              Submit Rating
+            </button>
+          </div>
         </div>
 
         <div class="content">
