--- a/views/view-notes.ejs
+++ b/views/view-notes.ejs
@@ -54,4 +54,4 @@
     return confirm("Are you sure you want to delete this note?");
   }
 </script>
-<script src="../js/navbar.js"></script>
+<script src="./js/navbar.js"></script>
