Implementing the rating system

--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -68,6 +68,8 @@
               <p id="answer" class="card-text answer hide"></p>
             </div>
           </div>
+          <input type="hidden" id="difficulty" value="1" />
+
           <div class="difficulty-rating">
             <p style="color: #000">Select Difficulty (1-Easy, 5-Hard)</p>
             <div class="rating">
@@ -78,6 +80,7 @@
               <span data-value="5">☆</span>
             </div>
           </div>
+
           <div class="rating-button-container">
             <button id="submit-rating" class="button is-rounded is-fullwidth">
               Submit Rating
