--- a/views/awaiting-approval.ejs
+++ b/views/awaiting-approval.ejs
@@ -1,5 +1,3 @@
-<%- include('./partials/header', {title: "Awaiting Approval"}) %>
-
 <section class="section" style="min-height: calc(100vh - (2 * 60px))">
   <div class="container">
     <h1 class="title is-1 has-text-centered" style="font-size: 1.8rem">
@@ -14,9 +12,7 @@
     </div>
 
     <p class="has-text-center">
-      <a href="/login" class="button is-primary">Return to the login page</a>
+      <a href="/login" class="button">Return to the login page</a>
     </p>
   </div>
 </section>
-
-<%- include('./partials/footer') %>
