--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,3 @@
-<%- include('./partials/header', {title: 'Register', style: '../css/login.css'})
-%>
 <section class="hero is-fullheight">
   <div class="hero-body">
     <div class="container">
@@ -93,7 +91,11 @@
               </div>
               <div class="field">
                 <div class="control">
-                  <button type="submit" class="button is-primary is-fullwidth">
+                  <button
+                    type="submit"
+                    class="button is-fullwidth"
+                    id="register-button"
+                  >
                     Register
                   </button>
                 </div>
@@ -105,4 +107,3 @@
     </div>
   </div>
 </section>
-<%- include('./partials/footer') %>
