--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -87,7 +87,9 @@
             </button>
           </div>
         </div>
-
+        <div class="last-seen-content">
+          <p id="last-seen" class="subtitle is-6"></p>
+        </div>
         <div class="content">
           <br />
           <p id="category" class="subtitle is-6"></p>
