--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -86,6 +86,9 @@
               Submit Rating
             </button>
           </div>
+          <div id="rating-success" class="notification success is-hidden">
+            Rating submitted successfully!
+          </div>
         </div>
         <div class="last-seen-content">
           <p id="last-seen" class="subtitle is-6"></p>
